# Python_Module

./: data_processor.py
Python_Module_00/ex4/: ft_plant_age.py
Python_Module_00/ex5/: ft_water_reminder.py
Python_Module_00/ex6/: ft_count_harvest_recursive.py
Python_Module_00/ex7/: ft_seed_inventory.py
Python_Module_003/ex0/: ft_command_quest.py
Python_Module_003/ex1/: ft_score_analytics.py
Python_Module_003/ex3/: ft_achievement_tracker.py
Python_Module_003/ex4/: ft_inventory_system.py
Python_Module_003/ex5/: ft_data_stream.py
Python_Module_004/ex0/: ft_ancient_text.py
Python_Module_004/ex1/: ft_archive_creation.py
Python_Module_004/ex2/: ft_stream_management.py
Python_Module_01/ex0/: ft_garden_intro.py
Python_Module_01/ex1/: ft_garden_data.py
Python_Module_01/ex2/: ft_plant_growth.py
Python_Module_01/ex3/: ft_plant_factory.py
Python_Module_01/ex4/: ft_garden_security.py
Python_Module_01/ex5/: ft_plant_types.py
Python_Module_01/ex6/: ft_garden_analytics.py
Python_Module_04/ex0/: ancient  (+1 more)
Python_Module_06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
Python_Module_07/: battle.py  capacitor.py  tournament.py
Python_Module_08/ex1/: loading.py  pyproject.toml  requirements.txt
ex0/: data_processor.py  ft_ancient_text.py
ex1/: ft_archive_creation.py
ex2/: data_pipeline.py  ft_stream_management.py
ex3/: ft_vault_security.py
(+43 files in other folders)
