[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis"
authors = ["yvoandri"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pandas-stubs = "^3.0.0"
